bynkc/tests/fixtures/negative/234_invariant_not_bool/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String
  state {
    count: Int,
  }

  invariant bad:
    count

  on call bump() -> Effect[()] {
    commit { ...self.state, count: self.state.count + 1 }
    ()
  }
}
